--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="A website designed for Frontend Mentor, a platform created to develop technical and constructive skills. Explore design and development challenges, enhance your skills in HTML, CSS, and JavaScript, and share your progress with a global community of developers. Challenge yourself, learn, and grow as a web developer!"
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon-32x32.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Interactive rating component</title>
